[package]
name = "relevant_xkcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7"
env_logger = "0.10"
once_cell = "1.17"
regex = "1.7"
reqwest = "0.11"
select = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.25", features = ["full"] }
